# serializer version: 1
# name: TestCreateOTU.test_empty_repo
  dict({
    'acronym': '',
    'excluded_accessions': set({
    }),
    'legacy_id': None,
    'molecule': dict({
      'strandedness': 'double',
      'topology': 'circular',
      'type': 'DNA',
    }),
    'name': 'Cabbage leaf curl Jamaica virus',
    'plan': dict({
      'segments': list([
        dict({
          'length': 2575,
          'length_tolerance': 0.03,
          'name': dict({
            'key': 'A',
            'prefix': 'DNA',
          }),
          'required': 'required',
        }),
        dict({
          'length': 2494,
          'length_tolerance': 0.03,
          'name': dict({
            'key': 'B',
            'prefix': 'DNA',
          }),
          'required': 'required',
        }),
      ]),
    }),
    'taxid': 345184,
  })
# ---
# name: TestCreateOTUCommands.test_ok[1278205-accessions0]
  dict({
    'acronym': '',
    'excluded_accessions': set({
      'JX263426',
    }),
    'legacy_id': None,
    'molecule': dict({
      'strandedness': 'single',
      'topology': 'linear',
      'type': 'RNA',
    }),
    'name': 'Dahlia latent viroid',
    'plan': dict({
      'segments': list([
        dict({
          'length': 342,
          'length_tolerance': 0.03,
          'name': None,
          'required': 'required',
        }),
      ]),
    }),
    'taxid': 1278205,
  })
# ---
# name: TestCreateOTUCommands.test_ok[345184-accessions1]
  dict({
    'acronym': '',
    'excluded_accessions': set({
    }),
    'legacy_id': None,
    'molecule': dict({
      'strandedness': 'double',
      'topology': 'circular',
      'type': 'DNA',
    }),
    'name': 'Cabbage leaf curl Jamaica virus',
    'plan': dict({
      'segments': list([
        dict({
          'length': 2575,
          'length_tolerance': 0.03,
          'name': dict({
            'key': 'A',
            'prefix': 'DNA',
          }),
          'required': 'required',
        }),
        dict({
          'length': 2494,
          'length_tolerance': 0.03,
          'name': dict({
            'key': 'B',
            'prefix': 'DNA',
          }),
          'required': 'required',
        }),
      ]),
    }),
    'taxid': 345184,
  })
# ---
